# sdl2-tutorials

./: .gitignore  CMakeLists.txt  README.md  main.cpp
01_image_on_screen/: main.cpp
10_clip_rendering_sprite_sheets/: main.cpp
13_animated_sprites_and_vsync/: main.cpp
15_true_type_fonts/: main.cpp
16_mouse_events/: main.cpp
17_key_states/: main.cpp
18_sound_and_music/: main.cpp
1_image_on_screen/: Makefile
20_advanced_timers/: main.cpp
21_calculating_and_capping_fps/: main.cpp
4_optimized_surface_loading/: main.cpp
5_extension_libs_and_other_image_formats/: main.cpp
8_viewports/media/: viewport.png:Zone.Identifier
9_color_keying/: Makefile  main.cpp
src/: CMakeLists.txt
src/02_event_driven_programming/: main.cpp
src/03_key_presses/: main.cpp
src/06_texture_loading_and_rendering/: main.cpp
src/07_geometry_rendering/: main.cpp
src/08_viewports/: main.cpp
src/11_color_modulation/: main.cpp
src/12_alpha_blending/: main.cpp
src/14_rotating_flipping/: main.cpp
src/18_sound_and_music/: Makefile
src/19_timing/: main.cpp
src/21_calculating_and_capping_fps/: Makefile  main  main.cpp
src/22_motion/: Makefile  dot.h  ktexture.c  main  main.c  main.cpp  state.h
src/22_motion_modularization_attempt/: Makefile  dot.c  ktexture.h  ktimer.c  ktimer.h  main.h
